[BE/FEAT] 활동상태 구현